fixed text overlap

--- a/public/styles/components/_countdown.scss
+++ b/public/styles/components/_countdown.scss
@@ -33,7 +33,7 @@
 			transform: translateX(-50%);
 			// width: 100%;
 			height: 20px;
-			font-size: 0.33em;
+			font-size: 0.25em;
 			text-transform: uppercase;
 
 			color: #485460;
